fixed twitter on safari and changed to cognifide channel

--- a/css/cognifide.github.css
+++ b/css/cognifide.github.css
@@ -6,13 +6,18 @@
     -webkit-flex-wrap: wrap;
     flex-wrap: wrap;
 }
+.row:before,
+.row:after {
+    display: initial;
+    content: unset;
+}
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: 992px) {
     .col-md-4 {
         width: 33.3%;
         height: 485px;
     }
-    
+
     #footer .col-md-4 {
         height: auto;
     }
@@ -355,7 +360,7 @@
             to bottom,
             rgba(0, 0, 0, 0),
             rgba(0, 0, 0, 0.5)
-    ), 
+    ),
     url(../images/labs-banner.jpg);
     width: 100%;
     height: 380px;
@@ -454,3 +459,6 @@ h4 {
   margin-bottom: 30px;
  }
 
+.twitter-timeline {
+    height: 440px !important; /* Necessary because twitter script makes it 600px high */
+}
